...
    <string name="yv_intro_chapter_label">Intro</string>
    <string name="yv_language_content_desc">Language</string>
    <string name="yv_line_spacing_label">Line Spacing</string>
    <string name="yv_next_chapter_content_desc">Next chapter</string>
    <string name="yv_previous_chapter_content_desc">Previous chapter</string>
    <string name="yv_reader_menu_font_settings">Font &amp; Settings</string>
    <string name="yv_reader_menu_sign_in">Sign in</string>
    <string name="yv_reader_menu_sign_out">Sign out</string>
    <string name="yv_theme_selected">Selected</string>
    <string name="yv_verse_action_add_highlight">Add %1$s highlight</string>
    <string name="yv_verse_action_copy">Copy</string>
    <string name="yv_verse_action_remove_highlight">Remove %1$s highlight</string>
    <string name="yv_verse_action_share">Share</string>
</resources>
...
